[gd_scene load_steps=20 format=2]

[ext_resource path="res://screens/title_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/art/pixel.png" type="Texture" id=4]
[ext_resource path="res://screens/hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sfx/button_click_down.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/transition.wav" type="AudioStream" id=7]
[ext_resource path="res://fonts/HelvetiPixel_outline.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/sfx/ufo_flying.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/npc_wait.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 192, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float radius = 0.75;

void fragment()
{
	vec2 u = ( UV - vec2( 0.5 ) ) * vec2( 320.0 / 180.0, 1.0 );
	COLOR = vec4( vec3( 1.0 ), step( radius * radius * 1.1, dot( u, u ) ) );
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/radius = 1.0

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fade:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("fade:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("fade:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_out"
length = 2.0

[node name="main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="stage" type="Node2D" parent="."]
pause_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="title_screen" parent="stage" instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 56.0
margin_top = 24.0
margin_right = 130.0
margin_bottom = 38.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Lunch Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouse_layer" type="CanvasLayer" parent="."]
layer = 100

[node name="mouse_pointer" type="AnimatedSprite" parent="mouse_layer"]
position = Vector2( -43, -17 )
frames = SubResource( 3 )
frame = 1
playing = true
offset = Vector2( 3, 3 )

[node name="hud_layer" type="CanvasLayer" parent="."]

[node name="hud" parent="hud_layer" instance=ExtResource( 5 )]

[node name="fade_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="fade" type="Sprite" parent="fade_layer"]
modulate = Color( 0, 0, 0, 1 )
material = SubResource( 5 )
scale = Vector2( 320, 180 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="fade_anim" type="AnimationPlayer" parent="fade_layer"]
autoplay = "default"
anims/default = SubResource( 6 )
anims/fadein = SubResource( 7 )
anims/fadeout = SubResource( 8 )

[node name="click_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
bus = "SPACE"

[node name="transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "sfx"

[node name="fade_audio" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 9 )

[node name="debug_layer" type="CanvasLayer" parent="."]

[node name="level_title" type="Label" parent="debug_layer"]
margin_top = 166.0
margin_right = 88.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 8 )
text = "debug"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ufo_landing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "sfx"
__meta__ = {
"_editor_description_": ""
}

[node name="npc_wait" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "sfx"
__meta__ = {
"_editor_description_": ""
}
